--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: İlker Toklu
+description: Im an intern at eistatistik
